    clicking on the "Show screenshot" button
  * gtk/gtkbuilder/window_main.ui:
    - fix "can_focus" property of entry_fast_search from false to
      true. Looks like glade messed this up.
  * common/rpackagelister.cc:
    - simplify openCache() code to use more modern std::vector features
      and fix crash along the way (LP: #936677)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Feb 2012 21:38:40 +0100

synaptic (0.75.5~exp5) experimental; urgency=low

  * common/rpackage.cc:
    - use SetCandidateRelease() when forcing a version to ensure
      that experimental/backports work better
  * common/rpackageview.cc:
    - add subview for not-automatic package in the origins filter,
      this is useful for e.g. debian/experimental or ubuntu-backports
      Note that you need to force the version using the menu:
     "Package/Force Version"

 -- Michael Vogt <mvo@debian.org>  Wed, 08 Feb 2012 21:21:43 +0100

synaptic (0.75.5~exp4) experimental; urgency=low

  * debian/patches/03_hide_browse_documentation.dpatch:
    - fix patch to build on ubuntu

 -- Michael Vogt <mvo@debian.org>  Tue, 07 Feb 2012 21:15:28 +0100

synaptic (0.75.5~exp3) experimental; urgency=low

  * move to dh8
  * modernize packaging
  * debian/patches/11_use-pkexec.dpatch:
    - merged to have pkexec as a additional auth mechanism, thanks
      to Marc Deslaurier (closes: #648311)
  * common/rpackagelister.{cc,h}:
    - add new "Synaptic::ShowAllMultiArch" config option that control
      if all multiarch packages are displayed or only those that are
      not available for the native arch
  * common/rpackageview.{cc,hh}:
    - add ArchitectureView on the main left on multiarch systems

 -- Michael Vogt <mvo@debian.org>  Mon, 06 Feb 2012 19:16:45 +0100

synaptic (0.75.5~exp2) experimental; urgency=low

  * merge changes from Ubuntu:
    - debian/changelog: updated
    - debian/control: add or-dependency policykit-1 for pkexec support