@@ -118,8 +118,12 @@ const char *transtable[][2] = {
    {"alien", _("Converted From RPM by Alien")},
    // TRANSLATORS: Ubuntu translations section
    {"translations", _("Internationalization and localization")},
-   // TRANSLATORS: Ubuntu metapackages section
+   // TRANSLATORS: metapackages section
    {"metapackages", _("Meta Packages")},
+   // TRANSLATORS: Alias for the Debian package section "education"
+   {"education", _("Education")},
+   // TRANSLATORS: Alias for the Debian package section "introspection"
+   {"introspection", _("GObject Introspection data")},
 
    // TRANSLATORS: Alias for the Debian package section "non-US"
    //              Export to the outside of the USA is not allowed
