@@ -10,6 +10,8 @@ synaptic (0.75.5~exp6) UNRELEASEDexperimental; urgency=low
   * common/rpackagelister.cc:
     - simplify openCache() code to use more modern std::vector features
       and fix crash along the way (LP: #936677)
+  * common/sections_trans.cc:
+    - add "metapackages", "education", "introspection"
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Feb 2012 21:38:40 +0100
 
